# Hikari

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
ext/: CMakeLists.txt
ext/filesystem/filesystem/: fwd.h  path.h  resolver.h
ext/glew/: CMakeLists.txt
ext/glfw/: CMakeLists.txt
ext/glog/src/: logging.cc
ext/hypothesis/: cephes.h  hypothesis.h
ext/imgui/: imgui_impl_opengl3.cpp
include/acceleration/: BVHAcceleration.hpp  HLBVHAcceleration.hpp
include/bsdf/: BumpMapBSDF.hpp  CoatingBSDF.hpp  ConductorBSDF.hpp  DielectricBSDF.hpp  DiffuseBSDF.hpp  MicrofacetBSDF.hpp  MirrorBSDF.hpp  NormalMapBSDF.hpp  PlasticBSDF.hpp  RoughCoatingBSDF.hpp  RoughConductorBSDF.hpp  RoughDielectricBSDF.hpp  RoughDiffuseBSDF.hpp  RoughPlasticBSDF.hpp  TwoSidedBSDF.hpp
include/camera/: PerspectiveCamera.hpp
include/core/: Acceleration.hpp  BSDF.hpp  Bitmap.hpp  Block.hpp  BoundingBox.hpp  Camera.hpp  Chi2Test.hpp  Color.hpp  Common.hpp  DiscretePDF.hpp  Emitter.hpp  Frame.hpp  Integrator.hpp  Intersection.hpp  MemoryArena.hpp  Mesh.hpp  MicrofacetDistribution.hpp  MipMap.hpp  Object.hpp  Parser.hpp  Primitive.hpp  PropertyList.cpp  PropertyList.hpp  Ray.hpp  ReconstructionFilter.hpp  RoughTransmitance.hpp  Sampler.hpp  Sampling.hpp  Scene.hpp  Screen.hpp  Shape.hpp  StudentTTest.hpp  Texture.hpp  Timer.hpp  Transform.hpp  Vector.hpp
include/emitter/: AreaLight.hpp  ConstantLight.hpp  DirectionalLight.hpp  EnvironmentLight.hpp  PointLight.hpp
include/filter/: BoxFilter.hpp  GaussianFilter.hpp  MitchellNetravalFilter.hpp  TentFilter.hpp
include/integrator/: AoIntegrator.hpp  NormalIntegrator.hpp  PathEMSIntegrator.hpp  PathMATSIntegrator.hpp  PathMISIntegrator.hpp  SimpleIntegrator.hpp  WhittedIntegrator.hpp
include/mesh/: WavefrontObjMesh.hpp
include/sampler/: IndependentSampler.hpp
include/texture/: BitmapTexture.hpp  CheckerboardTexture.hpp  CurvatureTexture.hpp  GridTexture.hpp  ScaleTexture.hpp  WireframeTexture.hpp
scene/: test.exr  test.xml
scene/bsdf/: ajax-conductor.xml  ajax-dielectric.xml  ajax-microfacet.xml  ajax-plastic.xml  ajax-roughDiffuse.xml  ajax-roughconductor.xml  conductor.xml  dielectric.xml  dragon-constantLight.xml  dragon-dielectric.xml  dragon-directionalLight.xml  dragon-plastic.xml  dragon-roughCoating.xml  dragon-roughConductor.xml  dragon-roughDielectric.xml  dragon-roughDiffuse.xml  dragon-roughPlastic.xml  glass.xml  matball.xml  plastic.xml  sphere-roughconductor.xml  texture_alpha.xml  texture_alpha_bsdf.xml  texture_bsdf.xml  texture_bump.xml  texture_normal.xml  unreal-conductor.xml  unreal-dielectric.xml  unreal-microfacet.xml  unreal-plastic.xml  unreal-roughDiffuse.xml  unreal-roughconductor.xml
scene/pa1/: ajax.exr  ajax.xml  bunny.exr  bunny.xml
scene/pa2/: ajax-normals.exr  ajax-normals.xml  imgui.ini
scene/pa3/: ajax-ao.exr  ajax-ao.xml  ajax-simple.exr  ajax-simple.xml  bunny-simple.exr
scene/pa4/: ajax-pointlight.exr  ajax-pointlight.xml  cbox-dielectric.xml  cbox-distributed.exr  motto-dielectric.exr  motto-dielectric.xml  motto-diffuse.exr  motto-diffuse.xml
scene/pa4/cbox/: cbox-distributed.exr  cbox-distributed.xml
scene/pa4/motto/: motto-dielectric.exr  motto-dielectric.xml  motto-diffuse.exr  motto-diffuse.xml
scene/pa4/tests/: test-mesh-furnace.xml  test-mesh.xml
scene/pa5/ajax/: ajax-rough.exr  ajax-rough.xml  ajax-smooth.exr  ajax-smooth.xml
scene/pa5/cbox/: cbox-ems.xml  cbox-mats.xml  cbox-mis.xml
scene/pa5/odyssey/: odyssey-ems.exr  odyssey-mats.exr  odyssey-mats.xml  odyssey-mis.exr
scene/pa5/table/: imgui.ini  table-ems.exr  table-ems.xml  table-mats.exr  table-mats.xml  table-mis.exr  table-mis.xml
scene/pa5/tests/: test-direct.xml  test-furnace.xml
scene/pa5/veach_mi/: veach-ems.xml  veach-mats.exr  veach-mats.xml  veach-mis.xml
scene/pa6/: ajax-rough.xml  ajax-smooth.exr  ajax-smooth.xml  env1.exr  env1.xml  envmap0.exr  envmap0.xml  envmap2.exr  envmap2.xml  envmap3.exr  envmap4.exr  envmap4.xml  envmap_0.exr  envmap_1.exr  envmap_1.xml  envmap_2.exr  envmap_3.exr  envmap_3.xml  envmap_4.exr
src/: Main.cpp
src/acceleration/: BVHAcceleration.cpp  HLBVHAcceleration.cpp
src/bsdf/: BumpMapBSDF.cpp  CoatingBSDF.cpp  ConductorBSDF.cpp  DielectricBSDF.cpp  DiffuseBSDF.cpp  MicrofacetBSDF.cpp  MirrorBSDF.cpp  NormalMapBSDF.cpp  PlasticBSDF.cpp  RoughCoatingBSDF.cpp  RoughConductorBSDF.cpp  RoughDielectricBSDF.cpp  RoughDiffuseBSDF.cpp  RoughPlasticBSDF.cpp  TwoSidedBSDF.cpp
src/camera/: PerspectiveCamera.cpp
src/core/: Acceleration.cpp  BSDF.cpp  Bitmap.cpp  Block.cpp  BoundingBox.cpp  Camera.cpp  Chi2Test.cpp  Color.cpp  Common.cpp  DiscretePDF.cpp  Emitter.cpp  Frame.cpp  Integrator.cpp  Intersection.cpp  MemoryArena.cpp  Mesh.cpp  MicrofacetDistribution.cpp  MipMap.cpp  Object.cpp  Parser.cpp  Primitive.cpp  PropertyList.cpp  Ray.cpp  ReconstructionFilter.cpp  RoughTransmitance.cpp  Sampler.cpp  Sampling.cpp  Scene.cpp  Screen.cpp  Shape.cpp  StudentTTest.cpp  Texture.cpp  Timer.cpp  Transform.cpp  Vector.cpp
src/emitter/: AreaLight.cpp  ConstantLight.cpp  DirectionalLight.cpp  EnvironmentLight.cpp  PointLight.cpp
src/filter/: BoxFilter.cpp  GaussianFilter.cpp  MitchellNetravalFilter.cpp  TentFilter.cpp
src/integrator/: AoIntegrator.cpp  NormalIntegrator.cpp  PathEMSIntegrator.cpp  PathMATSIntegrator.cpp  PathMISIntegrator.cpp  SimpleIntegrator.cpp  WhittedIntegrator.cpp
src/mesh/: WavefrontObjMesh.cpp
src/sampler/: IndependentSampler.cpp
src/texture/: BitmapTexture.cpp  CheckerboardTexture.cpp  CurvatureTexture.cpp  GridTexture.cpp  ScaleTexture.cpp  WireframeTexture.cpp
